refactor(menu): 불필요한 DTO 삭제, 응답 DTO record 클래스로 변경